fix: spacing issue

--- a/src/components/PaymentMethodCard/PaymentMethodCardHeader/PaymentMethodCardHeader.scss
+++ b/src/components/PaymentMethodCard/PaymentMethodCardHeader/PaymentMethodCardHeader.scss
@@ -21,6 +21,7 @@
                 width: 12.8rem;
                 border: 0;
                 padding: 0;
+                margin-top: unset;
             }
 
             .deriv-input {
